updated color theme and solved text overflow issue

--- a/notes/static/notes/main.css
+++ b/notes/static/notes/main.css
@@ -12,8 +12,16 @@ ul {
   margin: 0;
 }
 
+div {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow: auto;
+}
+
+
+
 .bg-steel {
-  background-color: #1E90FF;
+  background-color: #88BBE4;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -81,4 +89,8 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+.bordered {
+  word-wrap: break-word;
 }
